# snake-canvas2d-rs-wasm

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  webpack.config.js
src/: game.rs  highscore.rs  lib.rs  textdisplay.rs  utils.rs
