[package]
name = "snake-canvas2d-rs-wasm"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.63"
features = [
  'CanvasRenderingContext2d',
  'Event',
  'KeyboardEvent',
  'console',
  'Window',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
]
